--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,38 @@ body {
     }
 }
 
+.soundcloud-button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 20px;
+    background-color: #ff7700;
+    color: white;
+    text-decoration: none;
+    font-size: 1.2em;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.soundcloud-button:hover {
+    background-color: #ff5500;
+}
+
+.contact-button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 10px 0;
+    background-color: #b37cf2;
+    color: white;
+    text-decoration: none;
+    font-size: 1.2em;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.contact-button:hover {
+    background-color: #ff5500;
+}
+
 .fade-in-right {
     opacity: 0;
     animation: fadeInRight 1s forwards;
@@ -62,6 +94,18 @@ body {
     flex-direction: column;
     align-items: flex-start;
     margin-top: 4em; /* Add top margin */
+}
+
+.projects-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center; /* Center the projects-container */
+}
+
+.projects-container {
+    width: 100%; /* Limit the width to match the container */
+    margin-top: 2em;
+    text-align: right; /* Right-align the content */
 }
 
 .top-left {
@@ -104,13 +148,6 @@ body {
     opacity: 0; /* Hide initially for animation */
 }
 
-.project-image {
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-    margin-bottom: 1em;
-}
-
 .project h2, .project h3 {
     font-size: 1.5em;
     margin-bottom: 0.5em;
@@ -132,6 +169,19 @@ body {
     text-decoration: underline;
 }
 
+.project .gallery {
+    display: flex;
+    flex-wrap: wrap; /* Allow the images to wrap within the container */
+    gap: 10px; /* Add some spacing between the images */
+}
+
+.project-image {
+    max-width: 32.5%;
+    height: auto; /* Ensure the image maintains its aspect ratio */
+    flex: 1 1 auto; /* Allow the image to grow and shrink as needed */
+    margin-bottom: 1em;
+}
+
 .profile-image {
     max-width: 50%;
     height: auto;
@@ -142,41 +192,12 @@ body {
 .editable-paragraph {
     font-size: 1.2em;
     line-height: 1.5em;
+    margin-bottom: 2em; /* Add bottom margin for space */
 }
 
-.gallery {
-    position: relative;
-    max-width: 100%;
-    height: auto;
-    overflow: hidden;
-}
-
-.gallery-images img {
-    width: 100%;
-    display: none;
-}
-
-.gallery-images img.active {
-    display: block;
-}
-
-.gallery-controls {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);
-}
-
-.gallery-controls .prev,
-.gallery-controls .next {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    cursor: pointer;
-    padding: 10px;
-    font-size: 18px;
+.about-content h2 {
+    margin-top: 2em; /* Add top margin for space */
+    margin-bottom: 1em; /* Add bottom margin for space */
 }
 
 footer {
@@ -237,5 +258,9 @@ footer {
 
     .project-link {
         font-size: 1em;
+    }
+
+    .project .gallery {
+        flex-direction: column; /* Stack images vertically on smaller screens */
     }
 }
